// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Activity Interval Context Menu Interval context menu shallow renders 1`] = `
<div>
  <ul
    class="bp4-menu"
    role="menu"
  >
    <li
      class=""
      role="none"
    >
      <a
        class="bp4-menu-item bp4-popover2-dismiss menu-item-open-interval"
        data-cy="open-interval-btn"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="bp4-fill bp4-text-overflow-ellipsis"
        >
          Open interval
        </div>
      </a>
    </li>
    <li
      class=""
      role="none"
    >
      <a
        class="bp4-menu-item bp4-disabled menu-item-close-interval"
        data-cy="close-interval-btn"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="bp4-fill bp4-text-overflow-ellipsis"
        >
          Close interval
        </div>
      </a>
    </li>
  </ul>
   
</div>
`;

exports[`Activity Interval Context Menu Interval context menu shallow renders for active analyst 1`] = `
<div>
  <ul
    class="bp4-menu"
    role="menu"
  >
    <li
      class=""
      role="none"
    >
      <a
        class="bp4-menu-item bp4-popover2-dismiss menu-item-open-interval"
        data-cy="open-interval-btn"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="bp4-fill bp4-text-overflow-ellipsis"
        >
          Reopen interval
        </div>
      </a>
    </li>
    <li
      class=""
      role="none"
    >
      <a
        class="bp4-menu-item bp4-popover2-dismiss menu-item-close-interval"
        data-cy="close-interval-btn"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="bp4-fill bp4-text-overflow-ellipsis"
        >
          Close interval
        </div>
      </a>
    </li>
  </ul>
   
</div>
`;

exports[`Activity Interval Context Menu Interval context menu shallow renders interactive analysis stage interval for active analyst 1`] = `
<div>
  <ul
    class="bp4-menu"
    role="menu"
  >
    <li
      class=""
      role="none"
    >
      <a
        class="bp4-menu-item bp4-popover2-dismiss menu-item-open-interval"
        data-cy="open-interval-btn"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="bp4-fill bp4-text-overflow-ellipsis"
        >
          Reopen interval
        </div>
      </a>
    </li>
    <li
      class=""
      role="none"
    >
      <a
        class="bp4-menu-item bp4-popover2-dismiss menu-item-close-interval"
        data-cy="close-interval-btn"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="bp4-fill bp4-text-overflow-ellipsis"
        >
          Close interval
        </div>
      </a>
    </li>
  </ul>
   
</div>
`;

exports[`Activity Interval Context Menu matches snapshot 1`] = `
<div>
  <ul
    class="bp4-menu"
    role="menu"
  >
    <li
      class=""
      role="none"
    >
      <a
        class="bp4-menu-item bp4-disabled menu-item-open-interval"
        data-cy="open-interval-btn"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="bp4-fill bp4-text-overflow-ellipsis"
        >
          Open interval
        </div>
      </a>
    </li>
    <li
      class=""
      role="none"
    >
      <a
        class="bp4-menu-item bp4-popover2-dismiss menu-item-close-interval"
        data-cy="close-interval-btn"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="bp4-fill bp4-text-overflow-ellipsis"
        >
          Close interval
        </div>
      </a>
    </li>
  </ul>
</div>
`;
